--- a/guides/getting-started/writing-your-first-tests.mdx
+++ b/guides/getting-started/writing-your-first-tests.mdx
@@ -1,225 +1,291 @@
 ---
-title: "Writing Your First Unit Test"
-description: "Step through authoring your first tests using GoogleTest and GoogleMock. This guide introduces basic test structure, suite organization, and using assertions and simple mocks—ideal for users new to the framework or to automated C++ testing."
+title: "Writing Your First Tests"
+description: "Learn how to write basic and slightly more advanced unit tests with GoogleTest, using the core test and assertion macros. This guide walks through test case structure, using assertions, and understanding test results."
 ---
 
-# Writing Your First Unit Test
+# Writing Your First Tests
 
-Welcome to your first step in writing automated C++ tests using GoogleTest and GoogleMock. This guide will walk you through authoring your initial tests, introducing the basic test structure, organizing tests into suites, and using simple assertions and mocks. Whether you're new to unit testing or just new to this framework, these instructions will set a solid foundation.
+Learn how to write basic and slightly more advanced unit tests with GoogleTest, using the core test and assertion macros. This guide walks you through test case structure, using assertions, and understanding test results.
 
 ---
 
-## 1. Workflow Overview
+## 1. Introduction to Writing Tests
 
-- **Task Description:** Learn how to write your first basic test case using GoogleTest and GoogleMock.
-- **Prerequisites:**
-  - Have GoogleTest and GoogleMock installed and configured in your build environment.
-  - Basic knowledge of C++ programming.
-- **Expected Outcome:**
-  - Ability to define a test case and test suite.
-  - Understand how to write assertions.
-  - Create and use a simple mock class.
-- **Time Estimate:** Approximately 20-30 minutes.
-- **Difficulty Level:** Beginner
+### What This Guide Helps You Accomplish
+This guide teaches you how to write simple, effective C++ tests using GoogleTest’s core macros, including `TEST()` and `TEST_F()`. You'll learn how to:
 
-## 2. Writing Your First Test
+- Structure your tests properly.
+- Use assertions to verify correctness.
+- Organize tests into test suites and fixtures.
+- Understand and interpret test results.
 
-### Step 1: Include the Necessary Headers
+### Prerequisites
+- Have GoogleTest integrated in your project and properly installed.
+- Basic understanding of C++ programming.
+- Familiarity with your project’s code that you want to test.
 
-Start by including the GoogleTest and GoogleMock headers in your test source file.
+### Expected Outcome
+After following this guide, you will be able to write and run your first unit tests with GoogleTest, organizing them effectively, and verifying your code’s behavior automatically.
+
+### Time Commitment
+About 15-30 minutes to grasp concepts and write initial tests.
+
+### Difficulty Level
+Beginner
+
+---
+
+## 2. Core Concepts for Writing Tests
+
+### Tests and Test Suites
+- **Test**: A single function verifying a particular case.
+- **Test Suite**: A collection of logically related tests.
+
+Tests are defined using the `TEST()` macro:
 
 ```cpp
-#include <gtest/gtest.h>
-#include <gmock/gmock.h>  // If you plan to use mocks.
-```
-
-### Step 2: Create Your First Test Case
-
-GoogleTest uses the `TEST` macro to define a test case. It takes two parameters: a test suite name and a test name.
-
-Example of a simple test check:
-
-```cpp
-TEST(ExampleTest, BasicAssertions) {
-  EXPECT_EQ(1 + 1, 2);
-  EXPECT_NE(2 * 2, 5);
+TEST(TestSuiteName, TestName) {
+  ... test code ...
 }
 ```
 
-- `EXPECT_EQ` asserts that the two arguments are equal.
-- `EXPECT_NE` asserts that the two arguments are not equal.
-- If an expectation fails, GoogleTest logs a failure but proceeds with the rest of the test.
+Here, `TestSuiteName` groups related tests, and `TestName` identifies the individual test.
 
-### Step 3: Define a Mock Class
+### Naming Conventions
+- Use meaningful names with no underscores for suites and tests.
+- The first argument to `TEST()` is the test suite name; the second is the test’s name.
+- Tests in different test suites can have the same test name.
 
-If your tests depend on external objects or interfaces, use GoogleMock to create mock objects that let you define expected interactions.
+### Assertions
+Assertions verify conditions inside tests. There are two key assertion types:
 
-Example: Suppose you have an interface:
-
-```cpp
-class Turtle {
- public:
-  virtual ~Turtle() {}
-  virtual void PenUp() = 0;
-  virtual void PenDown() = 0;
-  virtual void Forward(int distance) = 0;
-};
-```
-
-You can define a mock class as:
-
-```cpp
-#include <gmock/gmock.h>
-
-class MockTurtle : public Turtle {
- public:
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
-};
-```
-
-The `MOCK_METHOD` macro creates mock versions of virtual functions for you.
-
-### Step 4: Use Mocks in a Test
-
-Here is a simple test using the `MockTurtle`.
-
-```cpp
-using ::testing::AtLeast;
-
-TEST(PainterTest, DrawsCircle) {
-  MockTurtle turtle;
-
-  EXPECT_CALL(turtle, PenDown())
-    .Times(AtLeast(1));
-
-  // Your production code class, which uses Turtle.
-  Painter painter(&turtle);
-  EXPECT_TRUE(painter.DrawCircle(0, 0, 5));
-}
-```
-
-- `EXPECT_CALL` defines that `PenDown()` should be called at least once.
-- When `painter.DrawCircle()` runs, the mock verifies this expectation.
-
-### Step 5: Build and Run Your Tests
-
-Compile your test binary linking with GoogleTest and GoogleMock.
-
-Run the test:
-
-```bash
-./your_test_executable
-```
-
-Expected output:
-
-```
-[==========] Running 1 test from 1 test suite.
-[----------] Global test environment set-up.
-[----------] 1 test from ExampleTest
-[ RUN      ] ExampleTest.BasicAssertions
-[       OK ] ExampleTest.BasicAssertions (0 ms)
-[----------] 1 test from ExampleTest (0 ms total)
-
-[----------] Global test environment tear-down
-[==========] 1 test from 1 test suite ran. (0 ms total)
-[  PASSED  ] 1 test.
-```
-
-If expectations are not met, GoogleTest and GoogleMock will report explicit failures.
-
----
-
-## 3. Working with Assertions
-
-Learn the basic assertions to express expectations in your tests:
-
-- `EXPECT_EQ(val1, val2)` - checks equality, reports failure but continues.
-- `ASSERT_EQ(val1, val2)` - checks equality and aborts test on failure.
-- `EXPECT_TRUE(condition)`, `ASSERT_TRUE(condition)`
-- `EXPECT_FALSE(condition)`, `ASSERT_FALSE(condition)`
-
-Choose `ASSERT_` variants to halt tests on critical failures.
-
----
-
-## 4. Writing and Using Mocks
-
-### a) Defining Mock Methods
-
-- Use `MOCK_METHOD(ReturnType, MethodName, (Args...), (Specs...));` inside your mock class's public section.
-- Always mock virtual methods.
-- Add appropriate qualifiers like `const` or `override` in the specs.
+- **ASSERT_***: Fatal assertion; stops the current test function if failed.
+- **EXPECT_***: Non-fatal assertion; test continues despite failure.
 
 Example:
 
 ```cpp
-class MockCalculator {
- public:
-  MOCK_METHOD(int, Add, (int a, int b), (const, override));
+EXPECT_EQ(value, expected_value) << "Failure explanation";
+ASSERT_TRUE(condition);
+```
+
+Use `ASSERT_*` when the test cannot proceed meaningfully after a failure, and `EXPECT_*` when you want to test multiple conditions in one test.
+
+### Writing Your First Simple Test
+
+Suppose you want to test a function:
+
+```cpp
+int Factorial(int n);
+```
+
+Create tests to cover basic behaviors like:
+
+```cpp
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
+
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(2), 2);
+  EXPECT_EQ(Factorial(3), 6);
+  EXPECT_EQ(Factorial(8), 40320);
+}
+```
+
+These tests verify that the function returns expected results for sample inputs.
+
+---
+
+## 3. Using Test Fixtures for Shared Setup
+
+When multiple tests require the same data or configuration, *test fixtures* let you reuse setup logic.
+
+### What Are Test Fixtures?
+Test fixtures are classes derived from `testing::Test` that hold common data and setup code.
+
+### How to Create a Fixture
+
+1. Define a fixture class inheriting from `testing::Test`.
+2. Put shared data members and setup/cleanup code inside.
+3. Write tests using the `TEST_F()` macro with the fixture.
+
+Example:
+
+```cpp
+class QueueTest : public testing::Test {
+ protected:
+  QueueTest() {
+    // Setup code for each test
+    q1_.Enqueue(1);
+    q2_.Enqueue(2);
+    q2_.Enqueue(3);
+  }
+
+  Queue<int> q0_;
+  Queue<int> q1_;
+  Queue<int> q2_;
 };
+
+TEST_F(QueueTest, IsEmptyInitially) {
+  EXPECT_EQ(q0_.size(), 0);
+}
+
+TEST_F(QueueTest, DequeueWorks) {
+  int* n = q0_.Dequeue();
+  EXPECT_EQ(n, nullptr);
+
+  n = q1_.Dequeue();
+  ASSERT_NE(n, nullptr);
+  EXPECT_EQ(*n, 1);
+  EXPECT_EQ(q1_.size(), 0);
+  delete n;
+
+  n = q2_.Dequeue();
+  ASSERT_NE(n, nullptr);
+  EXPECT_EQ(*n, 2);
+  EXPECT_EQ(q2_.size(), 1);
+  delete n;
+}
 ```
 
-### b) Setting Expectations
+### Important Notes for Fixtures
+- Each test gets a fresh fixture.
+- The `SetUp()` and `TearDown()` functions can be overridden for setup/cleanup.
+- Name fixture classes logically after the feature or component they test.
 
-Before exercising the mocked object, define expectations:
+---
+
+## 4. Running Tests and Interpreting Results
+
+### Typical Test Program Structure
+
+Your `main` function should initialize GoogleTest and run all tests:
 
 ```cpp
-EXPECT_CALL(mock_calculator, Add(3, 4))
-    .Times(1)
-    .WillOnce(::testing::Return(7));
+#include <gtest/gtest.h>
+
+int main(int argc, char **argv) {
+  testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
 ```
 
-- This expects `Add(3, 4)` to be called once, returning 7.
-- Use `Times(AnyNumber())` for less strict checks.
+Alternatively, link against `gtest_main` library to avoid writing your own main.
 
-### c) Using ON_CALL for Default Behavior
+### Expected Test Output
 
-Use `ON_CALL` to specify default behavior without setting required call expectations:
+- Tests that pass will report success.
+- Failures print detailed info including file and line number.
+
+Example failure message:
+
+```
+/path/to/test.cc:123: Failure
+Expected equality of these values:
+  Factorial(3)
+    Which is: 5
+  6
+```
+
+### Skipping and Disabling Tests
+
+- Tests with names prefixed by `DISABLED_` are not run.
+- You can skip tests at runtime using `GTEST_SKIP()` inside test code.
+
+### Handling Test Failures
+
+- Fatal failures stop the current test.
+- Non-fatal failures allow the test to continue, reporting all issues.
+
+Use `ASSERT_*` for unrecoverable errors, `EXPECT_*` otherwise.
+
+---
+
+## 5. Best Practices for Writing Tests
+
+- Only test one aspect or behavior per test to keep failures focused.
+- Use descriptive names for test suites and test cases.
+- Keep tests independent of each other; no shared global state.
+- Use `EXPECT_*` assertions unless test cannot meaningfully continue.
+- Prefer test fixtures (`TEST_F`) when multiple tests share setup.
+- Avoid unnecessary complexity; start simple and add as needed.
+
+---
+
+## 6. Troubleshooting Common Issues
+
+### Test Not Running
+- Confirm tests are linked and visible.
+- Check naming and that test functions are defined correctly.
+- Ensure `RUN_ALL_TESTS()` is called in `main`.
+
+### Assertion Failures
+- Read failure message carefully; it shows expected vs actual values.
+- Check if test setup correctly initializes data.
+
+### Tests Crashing
+- Use `ASSERT_*` instead of `EXPECT_*` if dereferencing pointers.
+- Check for null pointers or invalid memory access.
+
+### Multiple Failures
+- Use `EXPECT_*` to reveal all failures in one test pass.
+
+---
+
+## 7. Next Steps
+
+Once comfortable with these basics, explore:
+
+- Writing parameterized and typed tests.
+- Using mocks with GoogleMock to control dependencies.
+- Advanced assertions and failure handling.
+- Best practices for scaling tests and maintaining suites.
+
+Refer to:
+- [GoogleTest Primer](primer.md)
+- [Creating Mock Classes and Setting Expectations](/guides/mocking-techniques/mock-classes-expectations)
+- [Effective Use of Assertions and Matchers](/guides/core-testing-workflows/using-assertions-matchers)
+
+---
+
+## Appendix: Minimal Working Example
 
 ```cpp
-ON_CALL(mock_calculator, Add(::testing::_, ::testing::_))
-    .WillByDefault(::testing::Return(0));
+#include <gtest/gtest.h>
+
+// Function under test
+int Factorial(int n) {
+  if (n <= 1) return 1;
+  else return n * Factorial(n - 1);
+}
+
+// Simple test case
+TEST(FactorialTest, HandlesZero) {
+  EXPECT_EQ(Factorial(0), 1);
+}
+
+// Using fixture
+class FactorialFixture : public testing::Test {
+ protected:
+  void SetUp() override {
+    // Setup code if needed
+  }
+};
+
+TEST_F(FactorialFixture, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(3), 6);
+  EXPECT_EQ(Factorial(5), 120);
+}
+
+int main(int argc, char **argv) {
+  testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
 ```
 
 ---
 
-## 5. Common Mistakes & Best Practices
-
-- Always set expectations **before** calling the mock methods.
-- Mock all pure virtual methods or override if necessary.
-- Use matchers like `_` for arguments you don’t care about.
-- Avoid over-specifying expectations to keep tests resilient.
-- Use `NiceMock<T>` to suppress uninteresting call warnings when appropriate.
-
----
-
-## 6. Troubleshooting
-
-**Problem:** Test fails because an expected call wasn’t made. 
-- Verify your `EXPECT_CALL` for correct arguments and that it’s declared before the call.
-- Run your test with `--gmock_verbose=info` for detailed mock call tracing.
-
-**Problem:** Unexpected calls to mock methods.
-- Make sure you don’t have unexpected argument values.
-- Consider adding a catch-all expectation with `_` matcher and `Times(AnyNumber())` if some calls are allowed but not important.
-
-**Problem:** Mock methods don’t appear to be called due to missing virtual destructors.
-- Ensure the base class has a virtual destructor to avoid silent errors.
-
----
-
-## 7. Next Steps & Related Guides
-
-- Dive deeper into [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) for full mock usage.
-- Explore [Writing and Using Mocks Effectively](https://google.github.io/googletest/guides/core-workflows/mocking-techniques) for advanced patterns.
-- Refer to the [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) for detailed API.
-- Learn about Matchers and Actions in the relevant references.
-
----
-
-By stepping through this guide, you have learned to write your first unit tests with GoogleTest and GoogleMock. Testing is now within your reach, providing automated validation and enabling confident code changes.
-
-Happy testing!
+This example shows how to write standalone and fixture-based tests for a simple function.
